<resources>
    <string name="app_name">TestApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_text">We\'re trilled to have back</string>
    <string name="login">Login</string>


    <string name="login_text2">Let\'s get your signed in</string>
    <string name="sumbit">Submit</string>
    <string name="verify_now">Verify Now</string>
    <string name="verify_text">Please enter verification codesent to your mobile</string>
    <string name="verify">Verify</string>
</resources>