<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.demo.testapp.ui.splash.SplashFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.demo.testapp.ui.login.LoginFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_verifyotp"
        android:name="com.demo.testapp.ui.verifyotp.VerifyOtpFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_verify_otp" />
</navigation>