<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.demo.testapp.ui.verifyotp.VerifyOtpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/ic_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_gallery"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/verify_now"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_login" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verify_text"
            app:layout_constraintTop_toBottomOf="@+id/text_gallery" />


        <EditText
            android:id="@+id/otp1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:ems="10"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/otp2"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:ems="10"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/middle"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <TextView
            android:id="@+id/middle"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <!-- We will use any external lib for otp enter -->
        <EditText
            android:id="@+id/otp3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:ems="10"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/middle"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:ems="10"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/otp3"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>